<resources>
    <string name="app_name">Android Music Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="song">Song</string>
    <string name="songs">Songs</string>
    <string name="title_activity_player">Playing</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="filters_descr">Select a filter option</string>
    <string name="count_songs">%s song(s)</string>
    <string name="count_albums">%s album(s)</string>
    <string name="overflow_button">overflow button</string>
    <string name="thumbnail_description">thumbnail_description</string>
    <string name="image_description">image_description</string>
    <string name="flag_button">flag_btn</string>
    <string name="play_all">Play all</string>
    <string name="playlists">Playlists</string>
    <string name="playlist">Playlist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_dialog_title">Create playlist</string>
    <string name="add_to_playlist">Add to playlist...</string>
    <string name="playlist_dialog_selectortitle">Select a playlist</string>
    <string name="appwidget_text">lalala</string>
    <string name="add_widget">Add widget</string>
    <string name="lyrics_dialog_title">Lyric</string>
    <string name="accept">Accept</string>
</resources>
