<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/playlists_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_shape"
            android:padding="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="@string/playlist"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/album_title"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:paddingBottom="@dimen/songs_count_padding_bottom"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:text="@string/songs"
                android:textSize="@dimen/songs_count" />

            <ImageView
                android:id="@+id/overflow"
                android:layout_width="@dimen/ic_album_overflow_width"
                android:layout_height="@dimen/ic_album_overflow_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/smallAlbumArtMargin"
                android:contentDescription="@string/overflow_button"
                android:paddingBottom="@dimen/songs_count_padding_bottom"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_dots"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
