<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_items"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/songs_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <ImageView
                android:id="@+id/art"
                android:layout_width="@dimen/smallAlbumArt"
                android:layout_height="@dimen/smallAlbumArt"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/smallAlbumArtMargin"
                android:layout_marginLeft="@dimen/smallAlbumArtMargin"
                android:layout_marginRight="@dimen/smallAlbumArtMargin"
                android:layout_marginTop="@dimen/smallAlbumArtMargin"
                android:contentDescription="@string/overflow_button"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/art"
                android:layout_toStartOf="@id/thumbnail"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="@string/artist"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/songs_count"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/artist"
                android:layout_toEndOf="@id/art"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="@string/album"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/album_title"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/album"
                android:layout_centerVertical="false"
                android:layout_toEndOf="@id/art"
                android:paddingBottom="@dimen/songs_count_padding_bottom"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="Title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/album_title"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="false"
                android:layout_toEndOf="@id/title"
                android:paddingBottom="@dimen/songs_count_padding_bottom"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="00:00"
                android:textAlignment="textEnd"
                android:textSize="@dimen/songs_count" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
